# mkdocstrings-multirepo

./: .gitignore  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: publish-and-release.yml
src/mkdocstrings_multirepo/: main.py
