[project]
name = "mkdockyard"
version = "0.1.0"
authors = [
  { name="kay-mw" },
]
description = "Allows for the integration of multiple repos into a single mkdocs instance - no git submodules required. The repos are coming to dock 🚢"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mkdocs>=1.6.0",
    "platformdirs>=2.2.0",
]

[project.entry-points."mkdocs.plugins"]
mkdockyard = "mkdockyard.main:MkdockyardPlugin"

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.2",
    "mkdocstrings-python>=2.0.1",
]
